Improve Cosmic Flash sound emulation
Improve Zac11178 sound emulation (clown, poolcham, bbeltzac, mexico, zankor, spooky)

*** ROM SUPPORT *** Thanks to ipdb.org, Valerio Curzio, Matt's Basement Arcade
Correct Dumps:
Bell: Cosmic Flash (correct sound ROM)

Clones:
Sexy Girl (exact clone of Bally Playboy but using an additional image projector)
White Water P-6 (Prototype)

Removed Clones:
White Water P-1/P-2 (as these were just created to be able to use the P-1 sound roms, now wired to P-6 as found on a real machine)



Version 3.5 (October 23rd, 2022) - "Trick or Treat"
------------------------------------------------------------------------------

Saving NVRAM for Juegos Populares

More gracefully handle parsing errors in invalid altsound CSV files to avoid crashes

Updated LISY support to 5.28-76 (Linux for Gottlieb System1 & System80, Bally, Atari, Williams and 'Home' Pinballs)

Updated to zlib 1.2.13

VS2022 build support

*** CORE/CPU ***
Better handle flickering lamps on Sega/Stern Whitestar machines
Fixed sound command parsing for more (all?) Sega/Stern Whitestar machines, so altsound mode 1 should work much better now for these, incl. global volume control parsing
Added global volume control parsing for altsound mode 1 on the older WPCs (i.e. non-DCS)
Fixed sound commander issues (missing 2nd part of command) for the WPC89 sound board
New WPC95 machine type: Phantom Haus with a special 128x64 DMD! (see https://www.flipprojets.fr/PhantomHaus_EN.php)
Finally some progress on Zaccaria's 11178 analog sound
Fixed quick clock/samplerate changes for (at least) all games using the Votrax/SC01 chip and some few HC55516 CVSD based games
Retweaked new Votrax/SC01 emulation core to improve Taito and especially GTS80 games
Fixed background sound on blkholea, eclipse (and probably more...)
Added Ekky sound module support for clones of LTD's Force, Space Poker, and Black Hole (which is kinda similar in spirit to the non-emulated original sound chip)