@@ -2864,13 +2864,11 @@ DRIVER(sttng,l2)        //          12/93 W Star Trek: The Next Generation (LX-2
 DRIVER(sttng,d2)        //                  Star Trek: The Next Generation (DX-2) LED Ghost Fix
 DRIVER(sttng,l3)        //          12/93 W Star Trek: The Next Generation (LX-3)
 DRIVER(sttng,l5)        //          12/93 W Star Trek: The Next Generation (LX-5)
-DRIVER(sttng,l7)        //          02/94 W Star Trek: The Next Generation (LX-7)
-DRIVER(sttng,d7)        //                  Star Trek: The Next Generation (DX-7) LED Ghost Fix
+DRIVER(sttng,l7)        //          02/94 W Star Trek: The Next Generation (LX-7 Sound L-1)
+DRIVER(sttng,d7)        //                  Star Trek: The Next Generation (DX-7 Sound L-1) LED Ghost Fix
 DRIVER(sttng,l7c)       //          08/17 W Star Trek: The Next Generation (LX-7C Competition MOD)
-DRIVER(sttng,x7)        //          02/94 W Star Trek: The Next Generation (LX-7 Special)
-DRIVER(sttng,dx)        //                  Star Trek: The Next Generation (DX-7 Special) LED Ghost Fix
-DRIVER(sttng,s7)        //          02/94 W Star Trek: The Next Generation (LX-7 SP1)
-DRIVER(sttng,ds)        //                  Star Trek: The Next Generation (DX-7 SP1) LED Ghost Fix
+DRIVER(sttng,x7)        //          02/94 W Star Trek: The Next Generation (LX-7 Special Sound L-1)
+DRIVER(sttng,dx)        //                  Star Trek: The Next Generation (DX-7 Special Sound L-1) LED Ghost Fix
 DRIVER(sttng,g7)        //          02/94 W Star Trek: The Next Generation (LG-7 German)
 DRIVER(sttng,h7)        //                  Star Trek: The Next Generation (HG-7) LED Ghost Fix
 DRIVER(pop,pa3)         //WPC-522:  12/93 B Popeye Saves the Earth (PA-3 Prototype)
